hphp/hack/test/typecheck/namespace/namespace_aliasing_fun.php.exp
File "namespace_aliasing_fun.php", line 11, characters 14-23:
Unbound global function: 'Dict\foo' is not a valid name for fun() (Naming[2105])
